--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "app": "yarn workspace @zoomy/app"
   },
   "dependencies": {
+    "ts-node": "^7.0.1",
     "typescript": "^2.9.2"
   },
   "workspaces": [
