--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,15 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev": "webpack-dev-server",
     "build": "webpack --config ./webpack.config.ts"
   },
   "dependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/plugin-syntax-typescript": "^7.0.0",
     "@types/webpack": "^4.4.11",
     "babel-loader": "^8.0.2",
-    "babel-plugin-syntax-typescript": "^7.0.0-alpha.19",
+    "html-webpack-plugin": "^3.2.0",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-hot-loader": "^4.3.6",
     "ts-loader": "^5.0.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
