--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server",
+    "start": "webpack-dev-server",
     "build": "webpack --config ./webpack.config.ts"
   },
   "dependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-jsx": "^7.0.0",
     "@babel/plugin-syntax-typescript": "^7.0.0",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
     "@types/webpack": "^4.4.11",
     "babel-loader": "^8.0.2",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-hot-loader": "^4.3.6",
+    "react-testing-library": "^5.1.0",
     "ts-loader": "^5.0.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "webpack": "^4.17.2",
