--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack --config ./webpack.config.ts"
+    "build": "TS_NODE_PROJECT='tsconfig.wp.json' webpack --config ./webpack.config.ts"
   },
   "dependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-jsx": "^7.0.0",
     "@babel/plugin-syntax-typescript": "^7.0.0",
     "@types/react": "^16.4.14",
@@ -18,6 +19,8 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-hot-loader": "^4.3.6",
+    "react-loadable": "^5.5.0",
+    "react-router-dom": "^4.3.1",
     "react-testing-library": "^5.1.0",
     "ts-loader": "^5.0.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
