--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "importHelpers": true,
     "strict": true,
     "noImplicitAny": false,
     "skipLibCheck": true,
